# ETransfer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
config/: README.md
docs/: api-design.md  deployment.md
etransfer/: __init__.py  __main__.py
etransfer/client/: __init__.py  cache.py  cli.py  downloader.py  gui.py  parallel_uploader.py  server_info.py  tus_client.py  uploader.py
etransfer/common/: config.py  constants.py  fileutil.py  models.py
etransfer/plugins/: __init__.py  aria2.py  base_sink.py  base_source.py  registry.py
etransfer/plugins/sinks/: __init__.py  local.py  tos_multipart.py  zos.py
etransfer/plugins/sources/: __init__.py  direct.py  gdrive.py  huggingface.py
etransfer/server/: __init__.py  admin.py  background.py  config.py  io_pool.py  main.py  proxies.py  rate_limiter.py
etransfer/server/auth/: __init__.py  db.py  models.py  oauth.py  privilege.py  routes.py
etransfer/server/auth/templates/: login_success.html
etransfer/server/middleware/: __init__.py  auth.py  traffic.py
etransfer/server/routes/: auth.py  files.py  folders.py  info.py  migrations.py  plugins.py  tasks.py
etransfer/server/services/: __init__.py  instance_traffic.py  ip_mgr.py  state.py  traffic.py
etransfer/server/services/backends/: __init__.py  file.py  interface.py  memory.py  redis.py
etransfer/server/tasks/: __init__.py  manager.py  models.py
etransfer/server/tus/: __init__.py  handler.py  models.py  quota.py  storage.py
scripts/: export_failed_tasks.py  run_client_demo.py  start_test_env.sh  test_hot_reload.py  test_large_partial.py  test_multi_ip.py  test_quota_resume.py  test_retention.py  test_user_system.py
tests/: __init__.py  _fake_bucket.py  _fake_bucket_sink.py  conftest.py  test_auth_sessions.py  test_bucket_migration.py  test_cli_folder.py  test_cli_plugins.py  test_cli_remote_download.py  test_cli_retention_permanent_disabled.py  test_cli_server_reload.py  test_cli_sink_fake_bucket.py  test_cli_smoke.py  test_cli_upload_download.py  test_config.py  test_quota_retention.py  test_simple.py  test_task_concurrency_gate.py  test_transfer.py  test_zos_sink.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  router.ts
web/src/api/: client.ts
web/src/composables/: usePlugins.ts
web/src/views/: FileList.vue  System.vue  Tasks.vue  Upload.vue
